refined bottom panel look, fixed media controls wrapping, updated volume controls

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,14 @@
 body {
+	user-select: none;
 	background-color: #121212;
 	color: #ffffff;	
 }
-s
+
 body, html {width: 100%; height: 100%; margin: 0; padding: 0}	
+
+.acrylic-backdrop {
+	backdrop-filter: blur(5px);
+}
 
 .titlebar-buttons {
     -webkit-app-region: none;
@@ -16,7 +21,6 @@ body, html {width: 100%; height: 100%; margin: 0; padding: 0}
 #titlebar {
 	-webkit-user-select: none;
 	-webkit-app-region: drag;
-	backdrop-filter: blur(5px);
 	background-color: #808080ab;
 	position: fixed;	
 	line-height: 56px;
@@ -63,46 +67,91 @@ body, html {width: 100%; height: 100%; margin: 0; padding: 0}
 }
 
 #bottom-panel {
-	padding: 0px 30px;
+	padding: 0px 12px;
 	line-height: 56px;
-	backdrop-filter: blur(5px);
 	background-color: #808080ab;
 	position: fixed;
 	left: 0;
 	bottom: 0;
 	width: 100%;
-	height: 56px;
-	align-items: end;
+	height: auto;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
+#now-playing{
+	display: inline-block;
+}
+
+#now-playing-text {
+	min-width: 240px;
+	max-width: 420px;
+	margin-left: 140px;
+	text-overflow: ellipsis;
+	overflow: hidden;
+	white-space: nowrap;
 }
 
 #now-playing li{
 	margin-right: 5px;
+	vertical-align: text-bottom;
+}
+
+#now-playing-album-art-frame {
+	border-radius: 6px;
+	position: absolute;
+	transform: translate(0px, -80px);
+	background-color: #ffffff57;
+	vertical-align: center;
+	width: 128px;
+	height: 128px;
+	border: none;
+	padding: 4px;
 }
 
 #now-playing-album-art {
-	border: 3px solid #ffffff57;
-	vertical-align: center;
-	transform: translate(0px, -80px);
-	float: left;
-	width: 128px;
-	height: 128px;
-	margin-right: 10px;
-}
-
-#now-playing-song-title {
-	font-weight: bold; 
-}
-
-#seek-slider{
-	width: 300px;
-	margin: 0px 10px;
+	border-radius: 4px;
+	border: none;
+	margin: auto;
+	width: 100%;
+	height: 100%;
 }
 
 #media-controls {
-	float: right;
-	height: 84px;
+	justify-self: flex-end;
+	margin-left: auto;
 }
 
 #media-controls li {
 	display: inline;
+}
+
+#seek-duration, #seek-current-time {
+	width: 42px;
+	height: 10px;
+	text-align: center;
+}
+
+#seek-slider {
+	width: 240px;
+	margin: 0px 10px;
+}
+
+#volume-slider-field {
+	padding: 0px 10px 60px 10px;
+	height: 52px;
+	display: none;
+	position: absolute;
+	transform: translate(-34px, -142px) rotate(-90deg);
+	background-color: #808080ab;
+	border-radius: 4px;
+}
+
+#volume-slider {
+	width: 100px;
+}
+
+#volume-button:hover + #volume-slider-field, #volume-slider-field:hover {
+	display: block;
 }
